introduce optimized version for calling history info